Integration with UFO

--- a/.gitignore
+++ b/.gitignore
@@ -288,3 +288,4 @@ src/win-arena-container/client/.vscode/launch.json
 src/win-arena-container/vm/setup/agents.json
 src/win-arena-container/vm/setup/mm_agents/*
 src/win-arena-container/vm/setup/Logs.txt
+src/win-arena-container/client/ufo/
