--- a/.gitignore
+++ b/.gitignore
@@ -260,32 +260,33 @@ src/win-arena-container/client/.vscode/launch.json
 # src/win-arena-container/client/evaluation_examples_windows/examples/chrome/47543840-672a-467d-80df-8f7c3b9788c9-wos.json
 
 # tasks that require testing/re-testing due to constant image updates
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/c1fa57f3-c3db-4596-8f09-020701085416-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/9f3f70fc-5afc-4958-a7b7-3bb4fcb01805-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/b4f95342-463e-4179-8c3f-193cd7241fb2-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/9f935cce-0a9f-435f-8007-817732bfc0a5-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/82279c77-8fc6-46f6-9622-3ba96f61b477-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/a728a36e-8bf1-4bb6-9a03-ef039a5233f0-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/368d9ba4-203c-40c1-9fa3-da2f1430ce63-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/f5d96daf-83a8-4c86-9686-bada31fc66ab-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/f79439ad-3ee8-4f99-a518-0eb60e5652b0-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/fc6d8143-9452-4171-9459-7f515143419a-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/59155008-fe71-45ec-8a8f-dc35497b6aa8-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/b7895e80-f4d1-4648-bee0-4eb45a6f1fa8-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/f0b971a1-6831-4b9b-a50e-22a6e47f45ba-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/da46d875-6b82-4681-9284-653b0c7ae241-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/2ad9387a-65d8-4e33-ad5b-7580065a27ca-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/0d8b7de3-e8de-4d86-b9fd-dd2dce58a217-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/2888b4e6-5b47-4b57-8bf5-c73827890774-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/f3b19d1e-2d48-44e9-b4e1-defcae1a0197-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/1704f00f-79e6-43a7-961b-cedd3724d5fd-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/12086550-11c0-466b-b367-1d9e75b3910e-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/6c4c23a1-42a4-43cc-9db1-2f86ff3738cc-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/7f52cab9-535c-4835-ac8c-391ee64dc930-wos.json 
-# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/cabb3bae-cccb-41bd-9f5d-0f3a9fecd825-wos.json 
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/c1fa57f3-c3db-4596-8f09-020701085416-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/9f3f70fc-5afc-4958-a7b7-3bb4fcb01805-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/b4f95342-463e-4179-8c3f-193cd7241fb2-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/9f935cce-0a9f-435f-8007-817732bfc0a5-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/82279c77-8fc6-46f6-9622-3ba96f61b477-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/a728a36e-8bf1-4bb6-9a03-ef039a5233f0-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/368d9ba4-203c-40c1-9fa3-da2f1430ce63-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/f5d96daf-83a8-4c86-9686-bada31fc66ab-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/f79439ad-3ee8-4f99-a518-0eb60e5652b0-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/fc6d8143-9452-4171-9459-7f515143419a-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/59155008-fe71-45ec-8a8f-dc35497b6aa8-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/b7895e80-f4d1-4648-bee0-4eb45a6f1fa8-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/f0b971a1-6831-4b9b-a50e-22a6e47f45ba-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/da46d875-6b82-4681-9284-653b0c7ae241-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/2ad9387a-65d8-4e33-ad5b-7580065a27ca-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/0d8b7de3-e8de-4d86-b9fd-dd2dce58a217-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/2888b4e6-5b47-4b57-8bf5-c73827890774-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/f3b19d1e-2d48-44e9-b4e1-defcae1a0197-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/1704f00f-79e6-43a7-961b-cedd3724d5fd-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/12086550-11c0-466b-b367-1d9e75b3910e-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/6c4c23a1-42a4-43cc-9db1-2f86ff3738cc-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/7f52cab9-535c-4835-ac8c-391ee64dc930-wos.json
+# src/win-arena-container/client/evaluation_examples_windows/examples/chrome/cabb3bae-cccb-41bd-9f5d-0f3a9fecd825-wos.json
 
 # Ignore the files when preparing agents.
 src/win-arena-container/vm/setup/agents.json
 src/win-arena-container/vm/setup/mm_agents/*
 src/win-arena-container/vm/setup/Logs.txt
 src/win-arena-container/client/ufo/
+src/win-arena-container/client/evaluation_examples_windows/settings/*
